--- a/TP2/Readme
+++ b/TP2/Readme
@@ -46,23 +46,70 @@ de pixels ayant pour niveau de gris l'indice de cette case
 
 -- Décomposition de l'image 
 
-    distance (k ) = distance_min (intervalle) + distance(k -1)
+    distance (palette(i ... n),k) = distance_min (i,j) + distance(palette(j ... n), k -1)
 
     Algorithme : on suppose qu'on dispose d'une palette comme pour meilleur_gris
 
     entrée : n , k des entiers >0;
-    sortie : distance minimale de mla réduction de la palette 
+    sortie : distance minimale de la réduction de la palette 
 
     début 
 
-        soient tab un tableau à 255 cases de tableaux à 255 cases 
+        soient tab un tableau à 256 cases de tableaux à 256 cases 
 
-        pour i allant de 0 à 255
+        //initialisation du tableau 
 
-            si palette[i] != 0
+        pour i allant de 0 à 255 faire 
+            pour j allant de 0 à 255 faire 
 
-            fin si
+                //la diagonale vaut 0 sinon on initialise avec le plus grand nombre possible 
+                si i = j alors
+                    tab[i][j] = 0
+                sinon 
+                    tab[i][j] = MaxInt
+                fin si
 
+            fin pour 
         fin pour
+
+        //on appelle la fonction récursive sur toute la palette avec k découpes
+        rec(0,255,k)
     fin
+
+    -- Fonction récursive : 
+
+        entrée : debut, fin des entiers >= 0 , <= 255
+                k un entier >= 0
+
+        sortie : distance minimale de la réduction de la palette
+
+        debut 
+
+            si k = 0 alors
+
+                si tab[debut][fin] = MaxInt alors
+                    tab[debut][fin] = distance_min(debut,fin)
+                fin si 
+                retourne tab[debut][fin]
+
+            sinon 
+                
+                pour i allant de debut à fin faire 
+
+                    si palette[i] != 0 faire 
+                        pour j allant de i +1 à fin faire 
+                            si palette[j] != 0 faire 
+
+                                si tab[i][j] = MaxInt faire 
+                                    tab[i][j] = distance_min(i,j)
+                                fin si 
+
+                                tab[debut][fin] = min(tab[debut][fin], tab[i][j] + rec(j+1,fin,k -1))
+
+                            fin si 
+                        fin pour 
+                    fin si
+                fin pour 
+            fin si
+        fin
     
